# async-web

./: 404.html  Cargo.toml  README.md  home.html  tasks.html
examples/image-analyzer/: Cargo.toml
examples/image-analyzer/public/: index.html  scripts.js  styles.css
examples/image-analyzer/src/: alt_text.rs  api_call.rs  loaded_model.rs  main.rs  model.rs  token_output_resolution.rs  token_output_stream.rs
src/: factory.rs  lib.rs  main.rs  web.rs
src/factory/: queue.rs  work_manager.rs  worker.rs
src/web/: app.rs  endpoint.rs  errors.rs  method.rs  middleware.rs  queue.rs  request.rs  request_result.rs  resolution.rs  route.rs  route_info.rs  route_tree.rs  router.rs  routing.rs  streams.rs  work_manager.rs  worker.rs
src/web/errors/: app_state.rs  resolution_error.rs  routing_error.rs  worker_error.rs
src/web/factory/: worker.rs
src/web/resolution/: empty_resolution.rs  error_resolution.rs  file_bytes.rs  file_resolution.rs  file_text_resolution.rs  json_resolution.rs  merged_resolution.rs  redirect.rs
src/web/router/: route_node.rs  route_tree.rs
src/web/routing/: method.rs  middleware.rs  request.rs  route.rs  router.rs
src/web/routing/router/: endpoint.rs  route_node.rs  route_tree.rs
src/web/streams/: streamed_file.rs
