[package]
name = "async-web"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio-util = { version = "0.7.18", features = ["io"] }
bytes = "1.11.0"
tokio-stream = "0.1.18"
async-stream = "0.3.6"
