[package]
name = "async-web"
version = "0.1.0"
edition = "2024"

[dependencies]

tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tokio-stream = "0.1.18"

futures = "0.3.31"

async-stream = "0.3.6"

serde_json = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
